# markitdown-mcp

./: README.md  pyproject.toml  requirements.txt  server.py  setup.sh
