[project]
name = "python-mcp-markdownify"
version = "0.1.0"
description = "Pure Python MCP server for converting files and web content to Markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "markitdown>=0.0.1a3",
    "python-multipart>=0.0.10",
]